# BRMS

./: CMakeLists.txt  CellButton.qml  CellButtonForm.ui.qml  DatePicker.qml  GeneralButton.qml  GeneralButtonForm.ui.qml  Gestionale_lido_it_IT.ts  Home.qml  HomeForm.ui.qml  InfoCell.qml  InfoCellForm.ui.qml  MainView.qml  MainViewForm.ui.qml  PriceFormForm.ui.qml  README.md  SearchSolutionForm.ui.qml  TicketForm.qml  TicketFormForm.ui.qml  ToolBarLeft.qml  ToolBarLeftForm.ui.qml  ToolbarInfoCell.qml  ToolbarInfoCellForm.ui.qml  application.cpp  application.h  db_api.cpp  db_api.h  main.cpp  main.qml  qml.qrc
qml/: CellButton.qml  Home.qml  InfoCell.qml  MainView.qml  PriceForm.qml  SearchSolution.qml  SearchSolutionForm.ui.qml  TicketForm.qml  TicketFormForm.ui.qml  ToolBarLeft.qml  main.qml
src/: db_api.cpp  db_api.h  main.cpp
